references further changes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 - Insert beautified code
 - Remove footer section
 - Remove version number behind bg.jpg, image01.jpg references
+- Refacor the card.jpg link
 - Refactor the "Kalender"-Link
+- Refactor aars-cube.carrd.co references
 -->
 <!DOCTYPE HTML>
 <html lang="de">
@@ -17,7 +19,7 @@
     <meta property="og:title" content="AARS" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Anonymous for Animal Rights Switzerland | Aktivismus für die Rechte der Tiere in der Schweiz | Cubes" />
-    <meta property="og:image" content="https://aars-cube.carrd.co/assets/images/card.jpg?v=589bf2e0" />
+    <meta property="og:image" content="assets/images/card.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="800" />
