--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -40,6 +40,11 @@
                 <br v-if="event.isNextEventComingUp()" />
                 <h2 v-if="event.isNextEventComingUp()"><strong>Weitere Events</strong></h2>
             </div>
+
+            <div class="bottom-container">
+                <div class="push"></div>
+                <button><a class="button" target="_blank" href="https://calendar.google.com/calendar/embed?src=ac777afc379bf8bb3957cda6dbcd8240e31e90023c3593823e23b2018c059d7c%40group.calendar.google.com&ctz=Europe%2FParis" class="btn btn-primary" role="button">Als Google Kalender anzeigen</a></button>
+            </div>
         </div>
       </section>
       <footer>
