updating with latest fetch from carrd

--- a/calendar.html
+++ b/calendar.html
@@ -10,12 +10,12 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <!-- VUEJS -->
-    <!--<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>-->
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
+    <script src="javascripts/vue@2.6.11.js"></script>
     <!-- ADDITIONAL CSS-->
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link href="assets/images/favicon.ico" rel="shortcut icon" />
     <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -27,7 +27,7 @@
         <h1>AARS Kalender</h1>
         <p>“Anonymous for Animal Rights Switzerland” setzt sich für die Rechte der Tiere ein. Auf der Strasse bilden wir einen “Cube” und zeigen den Menschen mit Schweizer Aufnahmen, was hinter den Tierprodukten steckt. Mit interessierten Passanten führen wir Gespräche, wobei im Vordergrund die ethischen Aspekte und die Verantwortung jeder einzelnen Person stehen.</p>
 	<p>Masken, Schilder und Visitenkarten werden zur Verfügung gestellt. Achte bitte auf eine schwarze/möglichst dunkle Kleidung und bring, wenn möglich, ein Laptop/Tablet mit den entsprechenden Aufnahmen mit. Teste vorab, wie das Video in der Endlosschleife abgespielt und die Helligkeit auf dem Gerät auf höchster Stufe eingestellt wird.</p>
-	<p>Das Cube Video, unseren Outreach Guide und weitere Ressourcen findest du <a href="https://bit.ly/m/aars">hier</a>.</p>
+	<p>Das Cube Video, unseren Outreach Guide und weitere Ressourcen findest du <a href="https://sebastian-zimmermann.ch/aars/#join">hier</a>.</p>
 	<p>Bring zur Aktion bitte möglichst wenig Gepäck mit. Alle zum Cube mitgebrachten Gegenstände unterliegen deiner eigenen Verantwortung. Das Organisationsteam kann dafür keine Verantwortung übernehmen.</p>
 	<p>Nach dem Cube gehen wir gerne noch gemeinsam essen/trinken und tauschen uns aus.</p>
 	<p>Danke für deinen Einsatz!</p>
@@ -44,6 +44,7 @@
 				</div>
 				<div class="col-10">
 					<h3 class="text-uppercase"><strong>{{ event.name }}</strong></h3>
+					<p class="text-uppercase text-danger">{{ event.eComment }}</p>
 					<ul class="list-inline">
 				    		<li class="list-inline-item"><i class="fa fa-calendar-o" aria-hidden="true"></i> {{ event.eDate }}</li>
 						<li class="list-inline-item"><i class="fa fa-clock-o" aria-hidden="true"></i> {{ event.timeStr }}</li>
@@ -67,23 +68,23 @@
     	data: {
 		currentDate: new Date().setHours(0, 0, 0, 0),
 		eventData: [
-			{ eDate: "2023-11-25", name: "Cube in Zürich", timeStr: "13:45 - 17:00", eLocation: "Züghusplatz" },
-			{ eDate: "2024-03-02", name: "Cube in Aarau", timeStr: "13:45 - 17:00", eLocation: "Igelweid" },
-			{ eDate: "2024-03-23", name: "Cube in Zürich", timeStr: "13:45 - 17:00", eLocation: "Züghusplatz" },
-			{ eDate: "2024-04-20", name: "Cube in Zürich", timeStr: "13:45 - 17:00", eLocation: "Hirschenplatz" },
-			{ eDate: "2024-04-27", name: "Cube in Aarau", timeStr: "13:45 - 17:00", eLocation: "Igelweid" },
-			{ eDate: "2024-05-18", name: "Cube in Zürich", timeStr: "13:45 - 17:00", eLocation: "Züghusplatz" },
-			{ eDate: "2024-05-25", name: "Cube in Aarau", timeStr: "13:45 - 17:00", eLocation: "Igelweid" },
-			{ eDate: "2024-06-22", name: "[abgesagt] Cube in Zürich", timeStr: "13:45 - 17:00", eLocation: "Hirschenplatz" },
-			{ eDate: "2024-06-29", name: "Cube in Aarau", timeStr: "13:45 - 17:00", eLocation: "Igelweid" },
-			{ eDate: "2024-07-20", name: "Cube in Zürich", timeStr: "13:45 - 17:00", eLocation: "Bellevue" },
-			{ eDate: "2024-07-27", name: "[provisorisch] Cube in Aarau", timeStr: "13:45 - 17:00", eLocation: "Igelweid" },
-			{ eDate: "2024-08-24", name: "Cube in Zürich", timeStr: "13:45 - 17:00", eLocation: "Bellevue" },
-			{ eDate: "2024-08-31", name: "[provisorisch] Cube in Aarau", timeStr: "13:45 - 17:00", eLocation: "Igelweid" },
-			{ eDate: "2024-09-21", name: "Cube in Zürich", timeStr: "13:45 - 17:00", eLocation: "Hirschenplatz" },
-			{ eDate: "2024-09-28", name: "[provisorisch] Cube in Aarau", timeStr: "13:45 - 17:00", eLocation: "Igelweid" },
-			{ eDate: "2024-10-19", name: "Cube in Zürich", timeStr: "13:45 - 17:00", eLocation: "Züghusplatz" },
-			{ eDate: "2024-10-26", name: "[provisorisch] Cube in Aarau", timeStr: "13:45 - 17:00", eLocation: "Igelweid" }
+			{ eDate: "2023-11-25", name: "Cube in Zürich", timeStr: "13:45 - 17:00", eLocation: "Züghusplatz", eComment: "" },
+			{ eDate: "2024-03-02", name: "Cube in Aarau", timeStr: "13:45 - 17:00", eLocation: "Igelweid", eComment: "" },
+			{ eDate: "2024-03-23", name: "Cube in Zürich", timeStr: "13:45 - 17:00", eLocation: "Züghusplatz", eComment: "" },
+			{ eDate: "2024-04-20", name: "Cube in Zürich", timeStr: "13:45 - 17:00", eLocation: "Hirschenplatz", eComment: "" },
+			{ eDate: "2024-04-27", name: "Cube in Aarau", timeStr: "13:45 - 17:00", eLocation: "Igelweid", eComment: "" },
+			{ eDate: "2024-05-18", name: "Cube in Zürich", timeStr: "13:45 - 17:00", eLocation: "Züghusplatz", eComment: "" },
+			{ eDate: "2024-05-25", name: "Cube in Aarau", timeStr: "13:45 - 17:00", eLocation: "Igelweid", eComment: "" },
+			{ eDate: "2024-06-22", name: "Cube in Zürich", timeStr: "13:45 - 17:00", eLocation: "Hirschenplatz", eComment: "Dieser Cube wurde abgesagt!" },
+			{ eDate: "2024-06-29", name: "Cube in Aarau", timeStr: "13:45 - 17:00", eLocation: "Igelweid", eComment: "" },
+			{ eDate: "2024-07-20", name: "Cube in Zürich", timeStr: "13:45 - 17:00", eLocation: "Bellevue", eComment: "" },
+			{ eDate: "2024-07-27", name: "Cube in Basel", timeStr: "13:45 - 17:00", eLocation: "TBD", eComment: "Dieser Cube ist noch nicht bestätigt!" },
+			{ eDate: "2024-08-24", name: "Cube in Zürich", timeStr: "13:45 - 17:00", eLocation: "Bellevue", eComment: "" },
+			{ eDate: "2024-08-31", name: "Cube in Basel", timeStr: "13:45 - 17:00", eLocation: "TBD", eComment: "Dieser Cube ist noch nicht bestätigt!" },
+			{ eDate: "2024-09-21", name: "Cube in Zürich", timeStr: "13:45 - 17:00", eLocation: "Hirschenplatz", eComment: "" },
+			{ eDate: "2024-09-28", name: "Cube in Basel", timeStr: "13:45 - 17:00", eLocation: "TBD", eComment: "Dieser Cube ist noch nicht bestätigt!" },
+			{ eDate: "2024-10-19", name: "Cube in Zürich", timeStr: "13:45 - 17:00", eLocation: "Züghusplatz", eComment: "" },
+			{ eDate: "2024-10-26", name: "Cube in Basel", timeStr: "13:45 - 17:00", eLocation: "TBD", eComment: "Dieser Cube ist noch nicht bestätigt!" }
 		]
         },
         methods: {
@@ -95,6 +96,9 @@
         	getLocationHTML: function (eventLocationID) {
 			var locationHTML = "";
 			switch (eventLocationID) {
+                                case "TBD":
+                                        locationHTML = "";
+                                        break;
 				case "Züghusplatz":
 					locationHTML = "<li class='list-inline-item'><i class='fa fa-location-arrow' aria-hidden='true'> <a target='_blank' href='https://maps.app.goo.gl/vFZEtNKQBbDjfG9VA'>Züghusplatz</a></li>";
 					break;
