using new calendar

--- a/index.html
+++ b/index.html
@@ -1730,7 +1730,7 @@
                 </a>
               </li>
               <li>
-                <a href="https://sebastian-zimmermann.ch/aars/calendar.html" class="button n02">
+                <a href="./calendar/calendar.html" class="button n02">
                   <svg aria-labelledby="icon-title">
                     <title id="icon-title">Calendar</title>
                     <use xlink:href="#icon-59c45c646c93a770c2b114cf72c44f8e"></use>
