--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -51,7 +51,7 @@
       </footer>
     </div>
 
-    <script src="javascripts/scale.fix.js"></script>
+    <script src="./javascripts/scale.fix.js"></script>
 
     <script type="module">
         import { createApp, ref } from 'vue';
