--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -7,7 +7,7 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <!-- ADDITIONAL CSS-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link rel="stylesheet" href="./stylesheet/style.css">
+    <link rel="stylesheet" href="./stylesheets/style.css">
 
     <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
