--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -8,12 +8,11 @@
     <!-- ADDITIONAL CSS-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="./stylesheets/style.css">
-
+    <link href="/assets/images/favicon.ico" rel="shortcut icon" />
     <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-
     <!-- So that we can use import ... from 'vue' instead of using the whole url each time -->
     <script type="importmap">
         { "imports": { "vue": "https://unpkg.com/vue@3/dist/vue.esm-browser.js" }}
