--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -7,8 +7,9 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <!-- ADDITIONAL CSS-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?display=swap&family=Nanum+Gothic:ital,wght@0,400;1,400&family=Bebas+Neue:ital,wght@0,400;1,400&family=Inter:ital,wght@0,500;1,500" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="./stylesheets/style.css">
-    <link href="/assets/images/favicon.ico" rel="shortcut icon" />
+    <link href="../assets/images/favicon.ico" rel="shortcut icon" />
     <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
