--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <meta name="robots" content="index" />
     <meta name="robots" content="follow" />
     <meta name="author" content="Anonymous for Animal Rights Switzerland" />
-    <link href="/assets/images/favicon.ico" rel="shortcut icon" />
+    <link href="./assets/images/favicon.ico" rel="shortcut icon" />
     <meta property="og:site_name" content="AARS" />
     <meta property="og:title" content="AARS" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Anonymous for Animal Rights Switzerland | Aktivismus für die Rechte der Tiere in der Schweiz | Cubes" />
-    <meta property="og:image" content="assets/images/card.jpg" />
+    <meta property="og:image" content="./assets/images/card.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="800" />
