calendar styling changes

--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -25,7 +25,7 @@
         <h1>AARS Kalender</h1>
         <p>“Anonymous for Animal Rights Switzerland” setzt sich für die Rechte der Tiere ein. Auf der Strasse bilden wir einen “Cube” und zeigen den Menschen mit Schweizer Aufnahmen, was hinter den Tierprodukten steckt. Mit interessierten Passanten führen wir Gespräche, wobei im Vordergrund die ethischen Aspekte und die Verantwortung jeder einzelnen Person stehen.</p>
 	<p>Masken, Schilder und Visitenkarten werden zur Verfügung gestellt. Achte bitte auf eine schwarze/möglichst dunkle Kleidung und bring, wenn möglich, ein Laptop/Tablet mit den entsprechenden Aufnahmen mit. Teste vorab, wie das Video in der Endlosschleife abgespielt und die Helligkeit auf dem Gerät auf höchster Stufe eingestellt wird.</p>
-	<p>Das Cube Video, unseren Outreach Guide und weitere Ressourcen findest du <a href="https://bit.ly/m/aars">hier</a>.</p>
+	<p>Das Cube Video, unseren Outreach Guide und weitere Ressourcen findest du <a href="/#join">hier</a>.</p>
 	<p>Bring zur Aktion bitte möglichst wenig Gepäck mit. Alle zum Cube mitgebrachten Gegenstände unterliegen deiner eigenen Verantwortung. Das Organisationsteam kann dafür keine Verantwortung übernehmen.</p>
 	<p>Nach dem Cube gehen wir gerne noch gemeinsam essen/trinken und tauschen uns aus.</p>
 	<p>Danke für deinen Einsatz!</p>
