added target blanks for link buttons

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <hr id="divider06" class="style1 full">
             <ul id="buttons07" class="style1 buttons">
               <li>
-                <a href="https://watchdominion.com" class="button n01">
+                <a href="https://watchdominion.com" class="button n01" target="_blank">
                   <svg aria-labelledby="icon-title">
                     <title id="icon-title">Play</title>
                     <use xlink:href="#icon-2538bd758147bb49db26a93fbf0bcfc2"></use>
@@ -200,7 +200,7 @@
                 </a>
               </li>
               <li>
-                <a href="https://earthlings.de" class="button n02">
+                <a href="https://earthlings.de" class="button n02" target="_blank">
                   <svg aria-labelledby="icon-title">
                     <title id="icon-title">Play</title>
                     <use xlink:href="#icon-2538bd758147bb49db26a93fbf0bcfc2"></use>
@@ -209,7 +209,7 @@
                 </a>
               </li>
               <li>
-                <a href="https://www.netflix.com/title/81014008" class="button n03">
+                <a href="https://www.netflix.com/title/81014008" class="button n03" target="_blank">
                   <svg aria-labelledby="icon-title">
                     <title id="icon-title">Play</title>
                     <use xlink:href="#icon-2538bd758147bb49db26a93fbf0bcfc2"></use>
@@ -218,7 +218,7 @@
                 </a>
               </li>
               <li>
-                <a href="https://www.netflix.com/title/80033772" class="button n04">
+                <a href="https://www.netflix.com/title/80033772" class="button n04" target="_blank">
                   <svg aria-labelledby="icon-title">
                     <title id="icon-title">Play</title>
                     <use xlink:href="#icon-2538bd758147bb49db26a93fbf0bcfc2"></use>
@@ -227,7 +227,7 @@
                 </a>
               </li>
               <li>
-                <a href="https://www.netflix.com/title/80174177" class="button n05">
+                <a href="https://www.netflix.com/title/80174177" class="button n05" target="_blank">
                   <svg aria-labelledby="icon-title">
                     <title id="icon-title">Play</title>
                     <use xlink:href="#icon-2538bd758147bb49db26a93fbf0bcfc2"></use>
@@ -254,7 +254,7 @@
             <hr id="divider03" class="style1 full">
             <ul id="buttons05" class="style1 buttons">
               <li>
-                <a href="https://vegan.ch/vegan-leben/" class="button n01">
+                <a href="https://vegan.ch/vegan-leben/" class="button n01" target="_blank">
                   <svg aria-labelledby="icon-title">
                     <title id="icon-title">Paw</title>
                     <use xlink:href="#icon-8cb9e3ae2ca9ddf0ade7aaa40776dc7a"></use>
@@ -263,7 +263,7 @@
                 </a>
               </li>
               <li>
-                <a href="https://veganuary.com" class="button n02">
+                <a href="https://veganuary.com" class="button n02" target="_blank">
                   <svg aria-labelledby="icon-title">
                     <title id="icon-title">Calendar</title>
                     <use xlink:href="#icon-59c45c646c93a770c2b114cf72c44f8e"></use>
@@ -272,7 +272,7 @@
                 </a>
               </li>
               <li>
-                <a href="https://gamechangersmovie.com" class="button n03">
+                <a href="https://gamechangersmovie.com" class="button n03" target="_blank">
                   <svg aria-labelledby="icon-title">
                     <title id="icon-title">Play</title>
                     <use xlink:href="#icon-52655f31fd82f82d1c86cb188764da1e"></use>
@@ -281,7 +281,7 @@
                 </a>
               </li>
               <li>
-                <a href="https://happycow.net" class="button n04">
+                <a href="https://happycow.net" class="button n04" target="_blank">
                   <svg aria-labelledby="icon-title">
                     <title id="icon-title">Heart</title>
                     <use xlink:href="#icon-0fab58c8cba7ae847fa5ba32ea5a4bea"></use>
@@ -312,7 +312,7 @@
             <hr id="divider01" class="style1 full">
             <ul id="buttons02" class="style1 buttons">
               <li>
-                <a href="https://drive.google.com/file/d/1NKyEaXfe75h7SJIU0o2bFwr-HMagc-pG/view" class="button n01">
+                <a href="https://drive.google.com/file/d/1NKyEaXfe75h7SJIU0o2bFwr-HMagc-pG/view" class="button n01" target="_blank">
                   <svg aria-labelledby="icon-title">
                     <title id="icon-title">Information</title>
                     <use xlink:href="#icon-5df67a211ae41c4e5f96b6e0ea004ca3"></use>
@@ -321,7 +321,7 @@
                 </a>
               </li>
               <li>
-                <a href="./calendar/calendar.html" class="button n02">
+                <a href="./calendar/calendar.html" class="button n02" target="_blank">
                   <svg aria-labelledby="icon-title">
                     <title id="icon-title">Calendar</title>
                     <use xlink:href="#icon-59c45c646c93a770c2b114cf72c44f8e"></use>
@@ -330,7 +330,7 @@
                 </a>
               </li>
               <li>
-                <a href="https://drive.google.com/file/d/1uvJFSnjbUhISQPio0hK6JIRMjW8bVLZK/view" class="button n03">
+                <a href="https://drive.google.com/file/d/1uvJFSnjbUhISQPio0hK6JIRMjW8bVLZK/view" class="button n03" target="_blank">
                   <svg aria-labelledby="icon-title">
                     <title id="icon-title">Document</title>
                     <use xlink:href="#icon-609167072cf835e4e0e39f79e5fecfbf"></use>
@@ -339,7 +339,7 @@
                 </a>
               </li>
               <li>
-                <a href="https://drive.usercontent.google.com/download?id=1d5qn27noY-JxSZWIbTCMe429KWJ7F6_C&export=download&authuser=0" class="button n04">
+                <a href="https://drive.usercontent.google.com/download?id=1d5qn27noY-JxSZWIbTCMe429KWJ7F6_C&export=download&authuser=0" class="button n04" target="_blank">
                   <svg aria-labelledby="icon-title">
                     <title id="icon-title">Download</title>
                     <use xlink:href="#icon-80ea30b5b2fef8b399f9b3c4a14e6bee"></use>
@@ -348,7 +348,7 @@
                 </a>
               </li>
               <li>
-                <a href="https://anonymous-for-animal-rights.myspreadshop.ch/" class="button n05">
+                <a href="https://anonymous-for-animal-rights.myspreadshop.ch/" class="button n05" target="_blank">
                   <svg aria-labelledby="icon-title">
                     <title id="icon-title">Apparel</title>
                     <use xlink:href="#icon-e9729d6d2de348fccdf8c1e36ac9775a"></use>
@@ -357,7 +357,7 @@
                 </a>
               </li>
               <li>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLScPlzOxV4kVmjBzgIXhMPGBTE5VagUaWRejMUFBrlJtg6350g/viewform" class="button n06">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLScPlzOxV4kVmjBzgIXhMPGBTE5VagUaWRejMUFBrlJtg6350g/viewform" class="button n06" target="_blank">
                   <svg aria-labelledby="icon-title">
                     <title id="icon-title">Email</title>
                     <use xlink:href="#icon-c3c8e1063e3b7f84f6b54712741de139"></use>
@@ -366,7 +366,7 @@
                 </a>
               </li>
               <li>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdTguFjQ-6DxtkiYe49mI01fHC0MKkeztPCB_19-3Z2-Hwa5A/viewform" class="button n07">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdTguFjQ-6DxtkiYe49mI01fHC0MKkeztPCB_19-3Z2-Hwa5A/viewform" class="button n07" target="_blank">
                   <svg aria-labelledby="icon-title">
                     <title id="icon-title">Question</title>
                     <use xlink:href="#icon-a735734e4d8995524a2d26f22d9df894"></use>
@@ -474,7 +474,7 @@
             <hr id="divider05" class="style1 full">
             <ul id="buttons08" class="style1 buttons">
               <li>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdTguFjQ-6DxtkiYe49mI01fHC0MKkeztPCB_19-3Z2-Hwa5A/viewform" class="button n01">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdTguFjQ-6DxtkiYe49mI01fHC0MKkeztPCB_19-3Z2-Hwa5A/viewform" class="button n01" target="_blank">
                   <svg aria-labelledby="icon-title">
                     <title id="icon-title">Email</title>
                     <use xlink:href="#icon-c3c8e1063e3b7f84f6b54712741de139"></use>
