added target blanks for icons at the main page

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <hr id="divider04" class="style1 full">
             <ul id="icons01" class="style1 icons">
               <li>
-                <a class="n01" href="https://www.instagram.com/anonymous.for.animal.rights.ch/">
+                <a class="n01" href="https://www.instagram.com/anonymous.for.animal.rights.ch/" target="_blank">
                   <svg aria-labelledby="icon-title">
                     <title id="icon-title">Instagram</title>
                     <use xlink:href="#icon-85976685de3e4af37529a1ce5d57d2a7"></use>
@@ -141,7 +141,7 @@
                 </a>
               </li>
               <li>
-                <a class="n02" href="https://www.tiktok.com/@anonymous.animal.rights">
+                <a class="n02" href="https://www.tiktok.com/@anonymous.animal.rights" target="_blank">
                   <svg aria-labelledby="icon-title">
                     <title id="icon-title">TikTok</title>
                     <use xlink:href="#icon-694b338299bf630d8d2ec9bd42d31dbe"></use>
@@ -150,7 +150,7 @@
                 </a>
               </li>
               <li>
-                <a class="n03" href="https://www.facebook.com/groups/520873286084670">
+                <a class="n03" href="https://www.facebook.com/groups/520873286084670" target="_blank">
                   <svg aria-labelledby="icon-title">
                     <title id="icon-title">Facebook</title>
                     <use xlink:href="#icon-a1eb5cac0cee3b05a40d856c98ce14a5"></use>
@@ -159,12 +159,12 @@
                 </a>
               </li>
               <li>
-                <a class="n04" href="https://anonymous-for-animal-rights.myspreadshop.ch/">
+                <a class="n04" href="https://anonymous-for-animal-rights.myspreadshop.ch/" target="_blank">
                   <svg aria-labelledby="icon-title">
-                    <title id="icon-title">Apparel</title>
+                    <title id="icon-title">Merch</title>
                     <use xlink:href="#icon-e9729d6d2de348fccdf8c1e36ac9775a"></use>
                   </svg>
-                  <span class="label">Apparel</span>
+                  <span class="label">Merch</span>
                 </a>
               </li>
             </ul>
