--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
       </symbol>
     </svg>
     <div id="wrapper">
+    <video autoplay muted loop id="bgVideo">
+      <source src="./assets/videos/bg.mp4" type="video/mp4">
+    </video>
       <div id="main">
         <div class="inner">
           <section id="home-section">
