gcalendar button spread on smaller screens

--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -43,7 +43,7 @@
 
             <div class="bottom-container">
                 <div class="push"></div>
-                <button><a class="button" target="_blank" href="https://calendar.google.com/calendar/embed?src=ac777afc379bf8bb3957cda6dbcd8240e31e90023c3593823e23b2018c059d7c%40group.calendar.google.com&ctz=Europe%2FParis" class="btn btn-primary" role="button">Als Google Kalender anzeigen</a></button>
+                <button><a class="button btn btn-primary" target="_blank" href="https://calendar.google.com/calendar/embed?src=ac777afc379bf8bb3957cda6dbcd8240e31e90023c3593823e23b2018c059d7c%40group.calendar.google.com&ctz=Europe%2FParis" role="button">Als Google Kalender anzeigen</a></button>
             </div>
         </div>
       </section>
