added meta information on calendar site

--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -18,6 +18,13 @@
     <script type="importmap">
         { "imports": { "vue": "https://unpkg.com/vue@3/dist/vue.esm-browser.js" }}
       </script>
+    <meta name="description" content="Anonymous for Animal Rights Switzerland | Aktivismus für die Rechte der Tiere in der Schweiz | Cubes" />
+    <meta name="keywords" content="Tierrecht, Aktivismus, Tierrechtsaktivismus, Anonymous, Voiceless, Z&uuml;rich, Basel, Aarau, Schweiz, Cube, Truth, Vegan, Animal, Rights, Switzerland"/>
+    <meta name="language" content="Deutsch, de" />
+    <meta name="revisit-after" content="9 days" />
+    <meta name="robots" content="index" />
+    <meta name="robots" content="follow" />
+    <meta name="author" content="Anonymous for Animal Rights Switzerland" />
   </head>
   <body>
     <div class="wrapper" id="app">
