added donation link to form

--- a/index.html
+++ b/index.html
@@ -485,6 +485,15 @@
                   <span class="label">Kontakt aufnehmen</span>
                 </a>
               </li>
+              <li>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdOD5OJc_uH0zeCZB_C1c4Yf0mFtpuW5mGxy6FDyovzbm5byA/viewform" class="button n02" target="_blank">
+                  <svg aria-labelledby="icon-title">
+                    <title id="icon-title">Heart</title>
+                    <use xlink:href="#icon-0fab58c8cba7ae847fa5ba32ea5a4bea"></use>
+                  </svg>
+                  <span class="label">Spenden</span>
+                </a>
+              </li>
             </ul>
           </section>
         </div>
