replaced links to guides

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
             <hr id="divider01" class="style1 full">
             <ul id="buttons02" class="style1 buttons">
               <li>
-                <a href="https://drive.google.com/file/d/1NKyEaXfe75h7SJIU0o2bFwr-HMagc-pG/view" class="button n01" target="_blank">
+                <a href="./guides/cube.html" class="button n01" target="_blank">
                   <svg aria-labelledby="icon-title">
                     <title id="icon-title">Information</title>
                     <use xlink:href="#icon-5df67a211ae41c4e5f96b6e0ea004ca3"></use>
@@ -333,7 +333,7 @@
                 </a>
               </li>
               <li>
-                <a href="https://drive.google.com/file/d/1uvJFSnjbUhISQPio0hK6JIRMjW8bVLZK/view" class="button n03" target="_blank">
+                <a href="./guides/outreach.html" class="button n03" target="_blank">
                   <svg aria-labelledby="icon-title">
                     <title id="icon-title">Document</title>
                     <use xlink:href="#icon-609167072cf835e4e0e39f79e5fecfbf"></use>
