added translation link

--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
     </video>
       <div id="main">
         <div class="inner">
+          <div id="translate-link-container">
+            <a href="https://anonymousforanimalrights-ch.translate.goog/?_x_tr_sl=de&_x_tr_tl=en&_x_tr_hl=de" target="_blank">translate</a>
+          </div>
           <section id="home-section">
             <div id="image01" class="style1 image">
               <span class="frame">
