removed some target blanks for guides

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             <hr id="divider01" class="style1 full">
             <ul id="buttons02" class="style1 buttons">
               <li>
-                <a href="./guides/cube.html" class="button n01" target="_blank">
+                <a href="./guides/cube.html" class="button n01">
                   <svg aria-labelledby="icon-title">
                     <title id="icon-title">Information</title>
                     <use xlink:href="#icon-5df67a211ae41c4e5f96b6e0ea004ca3"></use>
@@ -327,7 +327,7 @@
                 </a>
               </li>
               <li>
-                <a href="./calendar/calendar.html" class="button n02" target="_blank">
+                <a href="./calendar/calendar.html" class="button n02">
                   <svg aria-labelledby="icon-title">
                     <title id="icon-title">Calendar</title>
                     <use xlink:href="#icon-59c45c646c93a770c2b114cf72c44f8e"></use>
@@ -336,7 +336,7 @@
                 </a>
               </li>
               <li>
-                <a href="./guides/outreach.html" class="button n03" target="_blank">
+                <a href="./guides/outreach.html" class="button n03">
                   <svg aria-labelledby="icon-title">
                     <title id="icon-title">Document</title>
                     <use xlink:href="#icon-609167072cf835e4e0e39f79e5fecfbf"></use>
