--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <link rel="canonical" href="https://anonymousforanimalrights.ch" />
     <link href="https://fonts.googleapis.com/css2?display=swap&family=Nanum+Gothic:ital,wght@0,400;1,400&family=Bebas+Neue:ital,wght@0,400;1,400&family=Inter:ital,wght@0,500;1,500" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="./stylesheets/main.css">
+    <link rel="stylesheet" href="./stylesheets/main-override.css">
   </head>
   <body class="is-loading">
     <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 40 40" display="none" width="0" height="0">
