added button for donation call

--- a/index.html
+++ b/index.html
@@ -134,6 +134,15 @@
                   <span class="label">Wer wir sind</span>
                 </a>
               </li>
+              <li>
+                <a href="https://tierimfokus.ch/crowdfunding/spende-fuer-anwaltschaftskosten/" class="button n05">
+                  <svg aria-labelledby="icon-title">
+                    <title id="icon-title">Heart</title>
+                    <use xlink:href="#icon-0fab58c8cba7ae847fa5ba32ea5a4bea"></use>
+                  </svg>
+                  <span class="label">Spendenaufruf</span>
+                </a>
+              </li>
             </ul>
             <hr id="divider04" class="style1 full">
             <ul id="icons01" class="style1 icons">
